# small_demo_rs

./: .gitignore
commandline_options_and_config/: Cargo.toml  env  example.yml  example2.yml  readme.md  run.sh
commandline_options_and_config/configurations/: Cargo.toml
commandline_options_and_config/configurations/src/: lib.rs
commandline_options_and_config/src/: main.rs
decimal_and_precision/: Cargo.toml
decimal_and_precision/src/: main.rs
dockered_json_serde/: Cargo.toml  Dockerfile  build.sh  docker_rust_precompile.rs  docker_rust_scripts.sh
dockered_json_serde/src/: main.rs
timer_interval_trigger/: Cargo.toml
timer_interval_trigger/src/: main.rs
timer_interval_trigger_synchronized/: Cargo.toml
timer_interval_trigger_synchronized/src/: main.rs
tokio_ex/tokio_process_command/: Cargo.toml
tokio_ex/tokio_process_command/src/: main.rs
tokio_ex/tokio_stdio/: Cargo.toml
tokio_ex/tokio_stdio/src/: main.rs
