workspace = { members = ["configurations"] }
[package]
name = "commandline_options_and_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configurations = { version = "0.1.0", path = "configurations" }
serde = "1.0.197"
